# roboy_control

./: .gitmodules
scripts/: xylophone_hitter.py
src/xylophone_plugin/: CMakeLists.txt  HitDetection_plugin.xml  README.md  package.xml
src/xylophone_plugin/launch/: robot.launch
src/xylophone_plugin/scripts/: head_bobber.py  xylophone_hitter.py
src/xylophone_plugin/src/: HitDetectionPlugin.cpp
src/xylophone_plugin/xylophone/: logfile.txt  model.config  model.sdf
src/xylophone_plugin/xylophone/meshes/CAD/: A_0.stl  A_1.stl  A_2.stl  A_sharp_0.stl  A_sharp_1.stl  A_sharp_2.stl  C_0.stl  C_1.stl  C_2.stl  C_3.stl  C_sharo_0.stl  C_sharp_1.stl  C_sharp_2.stl  D_0.stl  D_1.stl  D_2.stl  D_sharp_0.stl  D_sharp_1.stl  D_sharp_2.stl  E_0.stl  E_1.stl  E_2.stl  F_0.stl  F_1.stl  F_2.stl  F_sharp_0.stl  F_sharp_1.stl  F_sharp_2.stl  G_0.stl  G_1.stl  G_2.stl  G_sharp_0.stl  G_sharp_1.stl  G_sharp_2.stl  H_0.stl  H_1.stl  H_2.stl  Rahmen.stl  stick_left.stl  stick_right.stl
